@@ -1,5 +1,6 @@
 package org.zalando.nakadi.service;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Multimap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -388,12 +389,10 @@ public class EventTypeService {
     private Multimap<TopicRepository, String> deleteEventTypeWithSubscriptions(final String eventType) {
         try {
             return transactionTemplate.execute(action -> {
-                eventTypeRepository.listEventTypesWithRowLock(Set.of(eventType),
-                        EventTypeRepository.RowLockMode.UPDATE);
+                final Set<String> eventTypes = ImmutableSet.of(eventType);
+                eventTypeRepository.listEventTypesWithRowLock(eventTypes, EventTypeRepository.RowLockMode.UPDATE);
 
-                final List<Subscription> subscriptions =
-                        subscriptionRepository.listSubscriptions(Set.of(eventType), Optional.empty(),
-                                Optional.empty(), Optional.empty());
+                final List<Subscription> subscriptions = subscriptionRepository.listAllSubscriptionsFor(eventTypes);
 
                 if (!(featureToggleService.isFeatureEnabled(DELETE_EVENT_TYPE_WITH_SUBSCRIPTIONS)
                         || onlyDeletableSubscriptions(subscriptions))) {
